--- a/index.html
+++ b/index.html
@@ -124,13 +124,13 @@
         </ul>
       </section>
     </main>
-
+ 
     <!--Футер-->
     <footer>
       <a href="" lang="en">WebStudio</a>
       <address>
         г. Киев, пр-т Леси Украинки, 26<br/>
-        <a href="mailto:info@example.com">info@example.com</a></br>
+        <a href="mailto:info@example.com">info@example.com</a><br/>
         <a href="+380991111111">+38 099 111 11 11</a>
       </address>
     </footer>
